k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-nginx
  name: flask-deployment
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: flask-app
        image: 
        ports:
        - containerPort: 5002
