k8s/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: ingress-nginx
spec:
  serviceName: "db-service"
  selector:
    matchLabels:
      app: mysql
  updateStrategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: 540546280025.dkr.ecr.eu-central-1.amazonaws.com/mysqldb:latest
        ports:
          - containerPort: 3306
        volumeMounts:
          - name: mysql-data
            mountPath: /var/mysql
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: app-pvc
